--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@ button {
 /* navbar */
 
 nav {
-    padding: 40px 20px; /* Adjust top/bottom and left/right padding */
-  }
+  padding: 40px 20px; /* Adjust top/bottom and left/right padding */
+}
 
 .nav__row {
   display: flex;
@@ -142,7 +142,7 @@ nav {
 /* header */
 
 header {
-  padding: 40px 20px; 
+  padding: 40px 20px;
 }
 
 .container {
@@ -224,13 +224,12 @@ header {
   position: absolute;
   z-index: 2;
   right: 0;
-  width: 50%;
+  width: 65%;
   margin-top: 56px;
-  max-width: 600px; 
   margin: 0 auto;
 }
 
-.header__img {
+.header-img {
   width: 100%;
   height: auto;
 }
